# hvac

./: .gitignore  research.md  tasks.md
backend/: main.py  pyproject.toml
backend/compute/: __init__.py  billing.py  financials.py  health_score.py  labor.py  materials.py  rfis.py  triggers.py
backend/data/: dossiers.json  projects.jsonl  triggers.jsonl
backend/db/: connection.py  schema.sql
backend/email_templates/: margin_alert.html
backend/reasoning/: dossier_builder.py  evidence_puller.py  portfolio_builder.py  prompt.py  reasoning_engine.py
backend/routes/: chat.py  dossier.py  email.py  portfolio.py
backend/scripts/: build_dossiers.py  export_jsonl.py  launch_reasoning.py  reasoning_prompt.md  run_reasoning.py  seed_db.py
backend/tests/: test_phase1.py  test_phase2.py  test_phase3.py
backend/tools/: co_detail.py  field_notes.py  gmail_service.py  labor_detail.py  rfi_detail.py  send_email.py  what_if_margin.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/project/[id]/: page.tsx
frontend/src/components/: chat-panel.tsx  dossier-header.tsx  issue-card.tsx  portfolio-grid.tsx  project-card.tsx  reasoning-panel.tsx
frontend/src/lib/: api.ts
